--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,9 +7,12 @@
 
 /* Estilos del Header */
 header {
+	position: fixed;
+	top: 0;
 	width: 100%;
 	height: 140px;
 	box-shadow: 0px 10px 7px 0px rgba(0, 0, 0, 0.25);
+	z-index: 10;
 }
 
 .descuentos {
@@ -32,7 +35,7 @@ header {
 
 /* Estilos de Card */
 main {
-	margin-block: 2rem 4rem;
+	margin-block: 12rem 4rem;
 }
 section {
 	display: flex;
@@ -69,7 +72,7 @@ section {
 .portrait {
 	position: absolute;
 	top: 125px;
-	left: 30%;
+	left: calc(50% - 60px);
 	width: 120px;
 	height: 118px;
 	background-size: cover;
